--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
 </head>
 
 <body>
@@ -25,6 +26,9 @@
           <img class="logo__img" src="images/logo.png" alt="logo">
         </a>
         <nav class="menu">
+          <div class="menu__btn">
+            <span></span>
+          </div>
           <ul class="menu__list">
             <li class="menu__list-item"><a class="menu__list-link" href="#">Product</a></li>
             <li class="menu__list-item"><a class="menu__list-link" href="#">Customers</a></li>
@@ -159,8 +163,6 @@
       </div>
     </div>
   </section>
-
-
   <section class="team">
     <div class="container">
       <div class="team__inner">
@@ -198,7 +200,6 @@
       </div>
     </div>
   </section>
-
   <section class="blog">
     <div class="container">
       <h3 class="blog__title title">Marketing Strategies</h3>
@@ -290,8 +291,8 @@
       </div>
     </div>
   </section>
-
-  <footer>
+  
+  <footer class="footer">
     <div class="container">
       <div class="footer__inner">
         <a class="logo" href="#">
